--- a/online-zoo/css/section-3.css
+++ b/online-zoo/css/section-3.css
@@ -32,7 +32,7 @@
 
 .card-img{
     position: relative;
-    overflow: hidden;
+    overflow: hidden; 
 }
 .card-img > img{
     display: block;
@@ -64,33 +64,35 @@
 .black-popit-bg{
    
 }
+.black-bg{
+    opacity: 1;
+    background: rgba(0,0,0,.6);
+}
 .card-img:hover > img.scale{
-    transform: scale(1.07);
+    transform: scale(1.06);
 }
 .card-img > .title-img.slide-up{
     transform: translateY(100%);
  }
 .card-img:hover > .title-img.slide-up{
    transform: translateY(0);
-   transform: scale(1.07);
+   transform: scale(1.06);
 }
-.card-img:hover > img.black-bg{
+.card-img:hover img{
    filter:grayscale(.5);
-   z-index: -1;
 }
 .card-img:hover {
-    overflow: visible;
+    transform: scale(1.06);
 }
 .title-img,.card img{
     transition: 300ms ease-in;
 }
 
 .card-img > .title-img.fade{
-    opacity: 0;
+    opacity: 1;
 }
 .card-img:hover>.title-img.fade{
-    opacity: 1;
-    background: rgba(0,0,0,.5);
+    
 }
 .card-text{
     padding-left: 15px;
