--- a/online-zoo-2/css/buttons.css
+++ b/online-zoo-2/css/buttons.css
@@ -10,6 +10,9 @@ button,a[type=button]{
     text-transform: uppercase;
     letter-spacing: 0.1px;
     color: #FFFFFF;  
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 button::selection{
     text-decoration: none;
