--- a/online-zoo-2/css/buttons.css
+++ b/online-zoo-2/css/buttons.css
@@ -48,38 +48,28 @@ button::selection{
 
 
   input[type="radio"] {
-    /* Add if not using autoprefixer */
     -webkit-appearance: none;
-    /* Remove most all native input styles */
     appearance: none;
-    /* For iOS < 15 */
-    background-color: var(--form-background);
-    /* Not removed via appearance */
     margin: 0;
-  
     font: inherit;
-    color: currentColor;
-    width: 16px;
-    height: 16px;
-    border: 0.1em solid #FE9013;
     border-radius: 50%;
     transform: translateY(-0.075em);
-  
     display: grid;
     place-content: center;
   }
   
   input[type="radio"]::before {
     content: "";
-    width: 8px;
-    height: 8px;
     border-radius: 50%;
     transform: scale(0);
     transition: 120ms transform ease-in-out;
-    box-shadow: inset 1em 1em #fe9013;
+    
   }
-  
-  input[type="radio"]:checked::before {
+  input[type="radio"]::after {
+    transform: scale(0);
+    transition: 150ms transform ease-in-out;
+  }
+  input[type="radio"]:checked::before,input[type="radio"]:checked::after {
     transform: scale(1);
   }
 
