--- a/online-zoo/css/buttons.css
+++ b/online-zoo/css/buttons.css
@@ -1,4 +1,4 @@
-button,a[type=button]{
+button,a[type=button],input[type=submit]{
     cursor: pointer;
     border:0;
     font-family: 'Roboto Regular';
@@ -10,10 +10,43 @@ button,a[type=button]{
     text-transform: uppercase;
     letter-spacing: 0.1px;
     color: #FFFFFF;  
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 button::selection{
     text-decoration: none;
 }
+
+.form-control:focus-within {
+    color:#FE9013;
+  }
+input[type="radio"] {
+    -webkit-appearance: none;
+    appearance: none;
+    margin: 0;
+    font: inherit;
+    border-radius: 50%;
+    transform: translateY(-0.075em);
+    display: grid;
+    place-content: center;
+}
+  
+ input[type="radio"]::before {
+    content: "";
+    border-radius: 50%;
+    transform: scale(0);
+    transition: 50ms transform ease-in-out;
+    
+  }
+  input[type="radio"]::after {
+    transform: scale(0);
+    transition: 80ms transform ease-in-out;
+  }
+  input[type="radio"]:checked::before,input[type="radio"]:checked::after {
+    transform: scale(1);
+  }
+
 .default{
     width: 298px;
     height: 54px;
