--- a/books-shop/assets/css/style.css
+++ b/books-shop/assets/css/style.css
@@ -56,7 +56,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 1440px;
+    max-width: 1600px;
     margin: 0px auto;
     padding: 0px 1rem;
 }
@@ -100,9 +100,9 @@ body {
     max-width: 1400px;
     align-items: center;
     gap: 2rem;
-    margin: 0px auto;
-    padding: 0;
-    margin-top:100px;
+    /* margin: 0px auto;
+    padding: 0; */
+    /* margin-top:100px; */
 }
 header {
     position: fixed;
@@ -248,7 +248,7 @@ a.card__icon{
 .container{
     width: 100%;
     height: 100vh;
-   background-color: hsla(230, 18%, 75%, .8);
+    background: #0F1111;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -258,15 +258,21 @@ a.card__icon{
     visibility: hidden;
 }
 .popup_content{
-    width: 400px;
-    background: #fff;
+    max-width: 750px;
+    background: #fff;   
     border-radius: 1rem;
-    position: absolute;
+    position: relative;
     transform: translate(-50%,-50%) scale(0.1);
     text-align: center;
     padding: 1rem;
     color: #333;
     transition: transform 0.2s, top 0.2s;
+}
+.container {
+    background: rgba(0,0,0,.9);
+    height: 100%;
+    min-height: 670px;
+    min-width: 100%;
 }
 .popup_open{
     visibility:visible;
@@ -276,6 +282,38 @@ a.card__icon{
 .popup_content img{
     box-shadow: 0 .5rem 1rem #D1D9E6;
 }
-.popup_content h2{
-    --normal-font-size
+#close-reader {
+    -webkit-appearance: none;
+    outline: 0;
+    border: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 5002;
+    display: flex;
+    align-items: center;
+    padding: 1rem;
+    height: 48px;
+    color: #000;
+    font-size: 13px;
+    line-height: 16px;
+    background-color: transparent;
+    cursor: pointer;
+}
+.close-reader-text {
+    margin-right: 8px;
+}
+
+section.book_list_wrapper{
+    /* margin-top:7rem; */
+}
+.book-list{
+    display: grid;
+    grid-template-columns: 5rem 1fr repeat(3, minmax(2rem, 1fr));
+    grid-auto-rows: minmax(4rem,1fr);
+    row-gap: 1px;
+}
+.book-list>div{
+    border-bottom: 1px solid black;
+    padding: 0.5rem;
 }
