--- a/books-shop/assets/css/style.css
+++ b/books-shop/assets/css/style.css
@@ -336,6 +336,10 @@ a.card__icon{
     user-select: none;
     flex-grow: 1;
     text-align: right;
+    color: #262626;
+    font-size: 1.5rem;
+    margin: 0;
+    align-self: center;
   }
   
   .tab-switch {
