--- a/books-shop/assets/css/style.css
+++ b/books-shop/assets/css/style.css
@@ -141,7 +141,7 @@ article {
 }
 .card__img {
     height: 60%;
-    transition: all 0.2s ease 0s;
+    transition: all 0.5s ease 0s;
     user-select: none;
 }
 img {
@@ -162,13 +162,16 @@ img {
     color: rgb(255, 255, 255);
     font-weight: bold;
     cursor: pointer;
-    transition: all 0.2s ease 0s;
+    transition: all 0.4s ease 0s;
 }
 .card__icon{
     font-size: 1.5rem;
     color: var(--dark-color);
 }
 .card__icon:hover{
+    color: var(--accent-color);
+}
+.card__icon.active{
     color: var(--accent-color);
 }
 .card__precis{
@@ -275,6 +278,7 @@ a.card__icon{
     height: 100%;
     min-height: 670px;
     min-width: 100%;
+    padding: 3rem;
 }
 .popup_open{
     visibility:visible;
@@ -308,12 +312,29 @@ a.card__icon{
 
 .book-list>div{
     background-color: #fff;
+    /* padding: 0.5rem; */
+    align-self: center;
+    height: 100%;
+    border-bottom: 0.115rem solid #262626;
+    width: 100%;
+    text-align: center;
+    padding-top: 0.75rem;
+}
+
+.book-list>div.sum{
+    background-color: #fff;
     padding: 0.5rem;
     align-self: center;
     height: 100%;
+    display: flex;
+    width: 100%;
+    align-items: center;
 }
 
-
+.book-list>div.cart_total{
+    border: none;
+    padding-top: 2rem;
+}
 .list_wrapper {
     max-width: 75rem;
     width: 100%;
@@ -380,9 +401,9 @@ a.card__icon{
   .tab-content .book-list{
     display: grid;
     grid-template-columns: 5rem 1fr repeat(3, minmax(2rem, 0.5fr));
-    
+    grid-auto-rows: 4rem;
     row-gap: 1px;
-    background: #000;
+    place-items: center;
   }
   .tab-switch:checked + .tab-label {
     background: var(--dark-color);
@@ -405,13 +426,87 @@ a.card__icon{
   .link_1:hover{
     color: var(--accent-color);
   }
-  .total_sum{
+  .cart_total{
     grid-column: 1 / -1;
     background: #fff;
     height: 100%;
     padding: 1rem;
     margin: 0;
   }
-  .total_sum span{
+  .cart_total h3 span{
     padding-left: .5rem;
   }
+  
+div.amount-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    -moz-appearance: textfield;
+}
+
+input:focus {
+    outline: 0;
+}
+
+.custom-input label {
+    display: block;
+    text-align: center;
+    margin-block: 1rem;
+}
+
+.custom-input span {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #000;
+    color: #fff;
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 2px;
+    cursor: pointer;
+    transition: all .2s ease-in-out;
+    font-weight: bold;
+    user-select: none;
+}
+.custom-input input {
+    background-color: transparent;
+    border: none;
+    outline: 0;
+    color: var(--dark-color);
+    width: 3rem;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    height: 2rem;
+    font-size: 1.1rem;
+} 
+.btn{
+    display: inline-block;
+    background-color: #fff;
+    color: var(--dark-color);
+    padding: 0.75rem 1rem;
+    border-radius: 0.25rem;
+    transition: .1s;
+    border: 0.125rem solid var(--dark-color);
+    font-size: .75rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin: 0 auto;
+}
+.btn:hover{
+    cursor: pointer;
+    border-color:var(--accent-color);
+    color: var(--accent-color);
+}
+.btn.btn_confirm:hover{
+    border-color:var(--green-color);
+    color: var(--green-color);
+}
