--- a/online-zoo/pages/donate/css/section-donation-info.css
+++ b/online-zoo/pages/donate/css/section-donation-info.css
@@ -165,15 +165,15 @@ section.animals-widjet p.text{
     transform: translateY(0);
     cursor: pointer;
 }
-.range input[type="radio"]:hover{
-    background-color:#fe9013;
-}
-.range input[type="radio"]:hover{
+.range input[type="radio"]:checked{
     background-color:#fe9013;
 }
 .sum li:hover{
     color:#fe9013;
 } 
+.range input[type="radio"]:hover{
+    background-color: #fe9013;
+}
 .range input[type="radio"]:active{
     background-color: #4B9200;
 }
