--- a/books-shop/assets/css/delivery-form.css
+++ b/books-shop/assets/css/delivery-form.css
@@ -246,10 +246,10 @@ form .user_details .details{
     width: 2.5rem;
 }
 
-.user_details .input-box input:focus,
+/* .user_details .input-box input:focus,
 .user_details .input-box input:valid{
     border-color:#023059;
-}
+} */
 .user_details .options{
     display: flex;
     flex-direction: column;
@@ -353,7 +353,7 @@ form .button {
     display: flex;
     justify-content: center;
 }
-form .button input[type=submit]{
+form .button input[type=submit]:disabled{
     padding: 0.5rem 1rem;
     text-transform: uppercase;
     font-weight: 700;
@@ -361,14 +361,30 @@ form .button input[type=submit]{
     color: #fff;
     border: 2px solid #262626;
     width: 100%;
-    border-radius: 0.15rem;
+    border-radius: 0.25rem;
+    cursor: default;
 } 
 
-form .button input[type=submit]:hover{
+form .button input[type=submit]{
     cursor: pointer;
+    padding: 0.5rem 1rem;
+    text-transform: uppercase;
+    font-weight: 700;
     background-color: #023059;
-    border-color: #023059;
+    color: #fff;
+    width: 100%;
+    border-radius: 0.25rem;
+    border: 0.125rem solid #023059;
 }
-
-
-  
+.user_details .input-box input.invalid,
+form .user_details .payment-title.invalid{
+    border: .1rem solid #FF5151;
+}
+.user_details .input-box input.valid{
+    border: .1rem solid #023059;
+}
+.form-errors{
+    color:#FF5151;
+    font-size: small;
+    padding: 1rem 0rem 0rem 1rem;
+}
