--- a/books-shop/assets/css/style.css
+++ b/books-shop/assets/css/style.css
@@ -37,6 +37,21 @@ input[type=number]{
     }
 }
 
+@media screen and (max-width: 1200px){
+    div.cart{
+        width: 100vw;
+        right: calc(100vw * (-1));
+    }
+    div.cart-box{
+        grid-template-columns:1fr;
+    }
+    .bx-trash{
+        justify-self: center;
+    }
+     div.cart-content,h2.cart-title{
+        margin-left: 1rem;
+    }
+}
 /*-- BASE --*/
 *,::after,::before{
     box-sizing: border-box;
@@ -110,6 +125,9 @@ ul{
 }
 .user-info .card__icon {
     font-size: 2rem;
+    display: inline-flex;
+    align-items: center;
+    gap: 0.5rem;
 }
 
 .bd-grid {
@@ -120,7 +138,7 @@ ul{
 .bd-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-    grid-auto-rows: 300px;
+    grid-auto-rows: 350px;
     grid-auto-flow: dense;
 
     /* align-items: center; */
@@ -148,8 +166,8 @@ header {
     position:fixed;
     top:80px;
     right:0;
-    right: calc((100vw - 70%) * (-1));
-    width: calc(100vw - 70%);
+    right: calc((100vw - 65%) * (-1));
+    width: calc(100vw - 65%);
     height: 100vh;
     overflow-y: auto;
     overflow-x: hidden;
@@ -191,6 +209,12 @@ header {
     align-items: center;
     gap: 1rem;
     margin-top:1rem;
+}
+.card__icon svg{
+    cursor: pointer;
+}
+.card__icon:hover svg path,.card__icon:hover svg circle{
+    fill: var(--accent-color);
 }
 .cart-img{
     width:7rem;
@@ -237,8 +261,8 @@ header {
     font-size: 1.5rem;
     cursor: pointer;
 }
-.cart-remove:hover{
-    color: var(--accent-color);
+.cart-remove:hover svg{
+    fill: var(--accent-color) !important;
 }
 .cart:hover{
     box-shadow: 0 1rem 2.5rem  #D1D9E6;
@@ -293,7 +317,7 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    height: 300px;
+    height: 350px;
     padding: 1rem;
     border-radius: 1rem;
     overflow: hidden;
@@ -332,11 +356,10 @@ img {
     font-size: 1.5rem;
     color: var(--dark-color);
 }
-.card__icon:hover{
+
+.card__icon.active,.card__icon.active svg,.card__icon:hover{
     color: var(--accent-color);
-}
-.card__icon.active{
-    color: var(--accent-color);
+    fill: var(--accent-color) !important;
 }
 .card__precis{
     width: 100%;
@@ -379,7 +402,7 @@ a.card__icon{
 .card:hover{
     box-shadow: 0 .5rem 1rem #D1D9E6;
     background-color: #FFF;
-    
+    border-color: #023059;
 
 }
 .card:hover .card_container .card_title{
@@ -425,16 +448,16 @@ a.card__icon{
 
 /*-- MODAL POPUP --*/
 .container{
-    width: 100%;
-    height: 100vh;
-    background: #0F1111;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     position: fixed;
     top: 0;
-    z-index: 0;
-    visibility: hidden;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 501;
+    background: rgba(33,33,33,0.8);
+    transform: scale(0);
+    opacity: 0;
+    transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1),transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 .popup_content{
     max-width: 750px;
@@ -458,9 +481,13 @@ a.card__icon{
     visibility:visible;
     transform: scale(1);
     z-index: 1;
+    transform: scale(1);
+    opacity: 1;
+    margin: 0 auto;
 }
 .popup_content img{
     box-shadow: 0 .5rem 1rem #D1D9E6;
+    height: 15rem;
 }
 #close-reader {
     -webkit-appearance: none;
@@ -677,8 +704,8 @@ input:focus {
 }
 .btn:hover{
     cursor: pointer;
-    border-color:var(--accent-color);
-    color: var(--accent-color);
+    border-color:#023059;
+    color:#023059;
 }
 .btn.btn_confirm:hover{
     border-color:var(--green-color);
