fix: fix styles in main page

--- a/books-shop/assets/css/style.css
+++ b/books-shop/assets/css/style.css
@@ -365,7 +365,7 @@ img {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: center;
     transition: .3s;
     flex-direction:row-reverse;
 }
